overflow fixed

--- a/src/styles/Dropdown.module.scss
+++ b/src/styles/Dropdown.module.scss
@@ -76,7 +76,7 @@
 //Desktop version
 @media (min-width: 700px) {
   .container {
-    z-index: -1;
+    z-index: 1;
     background-color: rgba(0, 0, 0, 0.4);
     margin-right: toRem(60px);
     width: toRem(250px);
