--- a/src/styles/TopNavbar.module.scss
+++ b/src/styles/TopNavbar.module.scss
@@ -125,6 +125,7 @@
     }
     .navbar {
       display: block;
+      z-index: 2;
       top: 0;
       left: auto;
       right: 0;
@@ -133,6 +134,8 @@
       transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
     }
     .hamburger {
+      z-index: 2;
+
       transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
       &.visible {
         right: 0;
